--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,34 +1,32 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
     <!-- Hamburger menu icon -->
-    <button mat-icon-button class="menu-icon" (click)="toggleSidenav()">
+    <button mat-icon-button class="menu-icon" (click)="toggleSidenav()" aria-label="Toggle navigation">
       <mat-icon>menu</mat-icon>
     </button>
 
     <!-- Title -->
-    <span class="title">My Portfolio</span>
+    <span class="title">
+      <a routerLink="/" routerLinkActive="active" class="logo no-style">My Portfolio</a>
+    </span>
     <span class="spacer"></span>
 
     <!-- Navigation links -->
-    <div class="nav-links">
+    <nav class="nav-links">
       <a mat-button routerLink="/about" routerLinkActive="active">About</a>
       <a mat-button routerLink="/projects" routerLinkActive="active">Projects</a>
-      <!--<button mat-button (click)="scrollToAbout()">About</button>
-      <button mat-button (click)="scrollToWork()">Projects</button>-->
-    </div>
+    </nav>
   </mat-toolbar-row>
 </mat-toolbar>
 
 <mat-sidenav-container>
   <mat-sidenav #sidenav mode="over" [opened]="false">
     <mat-nav-list>
-      <a mat-button routerLink="/about" routerLinkActive="active">About</a>
-      <a mat-button routerLink="/projects" routerLinkActive="active">Projects</a>
-
-      <!--<a mat-list-item (click)="sidenav.close()">About</a>
-      <a mat-list-item (click)="sidenav.close()">Projects</a>-->
+      <a mat-list-item routerLink="/about" routerLinkActive="active" (click)="sidenav.close()">About</a>
+      <a mat-list-item routerLink="/projects" routerLinkActive="active" (click)="sidenav.close()">Projects</a>
     </mat-nav-list>
   </mat-sidenav>
+
   <mat-sidenav-content>
     <!-- Main Content Placeholder -->
     <div class="main-content">
